# prat-time-job

./: .gitignore  DESIGN-ai-career-copilot.md
starting-point/: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  TODOS.md  docker-compose.yml  pyproject.toml  seed_creators.sql
starting-point/docs/: REQUIREMENTS.md  douyin-creator-recommendation-design.md
starting-point/docs/plans/: 2026-04-27-auth-payment-userdata-design.md  2026-04-27-auth-payment-userdata-impl.md  2026-04-30-adaptive-task-plan-design.md  2026-04-30-adaptive-task-plan-impl.md  2026-04-30-builderpulse-enhancement-design.md  2026-04-30-builderpulse-enhancement-impl.md  2026-04-30-daily-task-cards-design.md  2026-04-30-daily-task-cards-impl.md  2026-04-30-market-radar-design.md  2026-04-30-project-full-overview.md  2026-05-02-stage-zero-state-machine-design.md  2026-05-02-v4-mvp-impl.md
starting-point/scripts/: sync_insights.py
starting-point/src/starting_point/: __init__.py  config.py  insights.py  main.py  models.py  wiki.py
starting-point/static/: MP_verify_ua6kktilPmZlvXX1.txt  account.html  admin.html  app.html  chat-plan-path.html  chat-self-discovery.html  chat-take-action.html  design-system.css  index.html  login.html  privacy.html  result-self-discovery.html  terms.html
starting-point/static/css/: chat.css
starting-point/tests/: conftest.py  test_auth_jwt.py  test_auth_routes.py  test_db_migrations.py  test_integration.py  test_integration_auth.py  test_models.py  test_models_auth.py  test_payment_routes.py  test_paywall.py  test_user_repo.py  test_wechat_oauth.py
(+133 files in other folders)
