[project]
name = "starting-point"
version = "4.0.0"
description = "启点 v4.0 — 帮助中年失业者发现经验价值"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.20.0",
    "PyJWT>=2.8.0",
    "firecrawl-py>=4.25.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-httpx>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/starting_point"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
